--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-*/terraform.tfvars
-*/terraform.tfstate
-*/terraform.tfstate.backup
-*/.terraform
-*/mykey*
+**/*lock*
+**/*tfstate
+**/*backup
+*/.terraform/**
+*/**/terraform.tfstate*/**
